--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -1,7 +1,7 @@
 {
-  "robotWidth": 0.75,
-  "robotLength": 0.75,
+  "robotWidth": 0.74,
+  "robotLength": 0.74,
   "holonomicMode": true,
-  "generateJSON": false,
+  "generateJSON": true,
   "generateCSV": false
 }
