--- a/.gitignore
+++ b/.gitignore
@@ -157,7 +157,22 @@ gradle-app.setting
 .project
 .settings/
 bin/
-.idea
+
+# IntelliJ
+*.iml
+*.ipr
+*.iws
+.idea/
+out/
+
+# Fleet
+.fleet
+
 # Simulation GUI and other tools window save file
 *-window.json
-*.wpilog
+
+# Simulation data log directory
+logs/
+
+# Folder that has CTRE Phoenix Sim device config storage
+ctre_sim/
